--- a/app/views/promos/_form.html.erb
+++ b/app/views/promos/_form.html.erb
@@ -22,6 +22,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :price %>
+    <%= form.number_field :price, id: :promo_price %>
+  </div>
+
+  <div class="field">
     <%= form.label :description %>
     <%= form.text_area :description, id: :promo_description %>
   </div>
