--- a/app/views/promos/index.html.erb
+++ b/app/views/promos/index.html.erb
@@ -1,33 +1,17 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Promos</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Imagen</th>
-      <th>Description</th>
-      <th>Category</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @promos.each do |promo| %>
-      <tr>
-        <td><%= promo.title %></td>
-        <td><%= image_tag(promo.imagen_url, :width => 100, :height => 100) if promo.imagen.present? %></td>
-        <td><%= promo.description %></td>
-        <td><%= promo.category.name %></td>
-        <td><%= link_to 'Show', promo %></td>
-        <td><%= link_to 'Edit', edit_promo_path(promo) %></td>
-        <td><%= link_to 'Destroy', promo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Promo', new_promo_path %>
+<div class="row">
+  <div class="container-fluid" style="margin-bottom: 200px">
+    <div class="container-fluid">
+      <div class="row">
+        <% @promos.each do |promo| %>
+        <div class="col-md-2">
+          <%= image_tag(promo.imagen_url, :width => 100, :height => 100) if promo.imagen.present? %>
+          <div class="title"><%= promo.title %></div>
+          <div class="price"><%= promo.price %></div>
+          <div class="description"><%= promo.description %></div>  
+        </div>
+        <% end %> 
+      </div>
+    </div>
+  </div>
+</div>
+</div>
