--- a/app/assets/stylesheets/promos.scss
+++ b/app/assets/stylesheets/promos.scss
@@ -12,16 +12,16 @@ body{
 
 .titulo{
   text-align: center;
-  font-size: 30px;
+  font-size: 20px;
   color:red;
 }
 
 .descripcion{
-  
+  font-size: 8px;
 }
 
 .precio{
-  font-size: 50px;
+  font-size: 40px;
   color: red;
 }
 
@@ -98,6 +98,8 @@ body{font-family: 'Quicksand', sans-serif;}
     box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.16);
     padding: 10px 10px 0px 10px;
     min-height: 210px;
+    margin-right: 15px;
+    margin-left: 15px;
 
   }
 
