--- a/app/views/promos/index.html.erb
+++ b/app/views/promos/index.html.erb
@@ -1,10 +1,10 @@
 
-<div class="container" style="margin-top: 20px">
+<div class="container" style="margin-top: 20px; padding: 10px 20px;">
   <div class="row">
     <% @promos.each do |promo| %>
       <span class="thumbnail">
           <div class="col-sm-4">
-            <%= image_tag(promo.imagen_url, :width => 200, :height => 200, style: "padding: 20px 5px 25px 5px;") if promo.imagen.present? %>
+            <%= image_tag(promo.imagen_url, :width => 150, :height => 150, style: "padding: 20px 5px 25px 5px;") if promo.imagen.present? %>
           </div>
           <div class="col-sm-8">
             <div class="container-promo">
