--- a/app/assets/stylesheets/promos.scss
+++ b/app/assets/stylesheets/promos.scss
@@ -14,15 +14,18 @@ body{
   text-align: center;
   font-size: 20px;
   color:red;
+  position: block;
 }
 
 .descripcion{
-  font-size: 8px;
+  font-size: 6px;
+  position: block;
 }
 
 .precio{
   font-size: 40px;
   color: red;
+  position: block;
 }
 
 
@@ -100,6 +103,7 @@ body{font-family: 'Quicksand', sans-serif;}
     min-height: 210px;
     margin-right: 15px;
     margin-left: 15px;
+    display: inline-block;
 
   }
 
