--- a/app/assets/stylesheets/promos.scss
+++ b/app/assets/stylesheets/promos.scss
@@ -12,7 +12,7 @@ body{
 
 .titulo{
   text-align: center;
-  font-size: 20px;
+  font-size: 30px;
   color:red;
   position: block;
 }
@@ -101,9 +101,9 @@ body{font-family: 'Quicksand', sans-serif;}
     box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.16);
     padding: 10px 10px 0px 10px;
     min-height: 210px;
-    width: 75%;
-    margin-right: 15px;
-    margin-left: 15px;
+    width: 90%;
+    margin: 5px auto;
+    
     display: inline-block;
 
   }
