--- a/app/assets/stylesheets/promos.scss
+++ b/app/assets/stylesheets/promos.scss
@@ -101,10 +101,9 @@ body{font-family: 'Quicksand', sans-serif;}
     box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.16);
     padding: 10px 10px 0px 10px;
     min-height: 210px;
-    width: 90%;
+    width: 85%;
     margin: 5px auto;
-    
-    display: inline-block;
+    display: block;
 
   }
 
