--- a/app/assets/stylesheets/promos.scss
+++ b/app/assets/stylesheets/promos.scss
@@ -12,22 +12,26 @@ body{
 
 .titulo{
   text-align: center;
-  font-size: 30px;
+  font-size: 25px;
   color:red;
   position: relative;
 }
 
 .descripcion{
-  font-size: 6px;
+  font-size: 9px;
   position: relative;
 }
 
 .precio{
-  font-size: 40px;
+  font-size: 35px;
   color: red;
   position: relative;
 }
 
+
+  .thumbnail img{
+    margin: 0px 40%;
+  }
 
 // Place all the styles related to the Products controller here.
 // They will automatically be included in application.css.
@@ -99,17 +103,12 @@ body{font-family: 'Quicksand', sans-serif;}
     -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.16);
     -moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.16);
     box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.16);
-    padding: 10px 10px 0px 10px;
+    padding: 15px;
     min-height: 300px;
     width: 85%;
-    margin: 5px auto;
+    margin: 10px auto;
     display: block;
 
-  }
-
-  span.thumbnail .col-md-6{
-    width: 50%;
-    margin-right: 0px;
   }
 
 .container h4{
