--- a/app/views/promos/index.html.erb
+++ b/app/views/promos/index.html.erb
@@ -3,16 +3,22 @@
   <div class="row">
     <% @promos.each do |promo| %>
       <span class="thumbnail">
-          <div class="col-sm-6">
+        <div class="row">
+          <div class="col-md-12">
             <%= image_tag(promo.imagen_url, :width => 120, :height => 120) if promo.imagen.present? %>
           </div>
-          <div class="col-sm-6">
+        </div>
+        <div class="row">
+          <div class="col-md-6">
             <div class="container-promo">
               <h4 class="titulo"><%= promo.title %></h4>
-              <p class="descripcion"><%= promo.description %></p>
-              <h4 class="precio pull-right"><%= number_to_currency(promo.price, strip_insignificant_zeros: true) %></h4>
             </div>
+              <div class="col-md-6">
+                <h4 class="precio pull-right"><%= number_to_currency(promo.price, strip_insignificant_zeros: true) %></h4>
+                <p class="descripcion"><%= promo.description %></p>
+              </div>
           </div>
+        </div>
       </span>
     <%end %>
   </div>
