--- a/app/views/promos/index.html.erb
+++ b/app/views/promos/index.html.erb
@@ -1,3 +1,8 @@
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+  </div>
+</nav>
+
 
 <div class="container" style="margin-top: 20px; padding: 10px 20px;">
   <div class="row">
@@ -9,14 +14,18 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6">
-            <div class="container-promo">
-              <h4 class="titulo"><%= promo.title %></h4>
+          <div class="col-md-12">
+            <h4 class="titulo"><%= promo.title %></h4>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <h4 class="precio"><%= number_to_currency(promo.price, strip_insignificant_zeros: true) %></h4>
             </div>
-              <div class="col-md-6">
-                <h4 class="precio pull-right"><%= number_to_currency(promo.price, strip_insignificant_zeros: true) %></h4>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
                 <p class="descripcion"><%= promo.description %></p>
-              </div>
+            </div>
           </div>
         </div>
       </span>
