--- a/app/assets/stylesheets/promos.scss
+++ b/app/assets/stylesheets/promos.scss
@@ -9,6 +9,19 @@ body{
   width: auto;
 }
 
+.navbar{
+  background-color: #ff3e0f;
+  width: 100%;
+  text-align: center;
+}
+
+.navbar-header{
+  align-content: center;
+  float: none;
+  display: inline-block;
+  margin: 0px auto; 
+}
+
 
 .titulo{
   text-align: center;
@@ -23,12 +36,14 @@ body{
   font-size: 35px;
   color: red;
   position: relative;
-  margin: 0px auto;
+  margin: 5px auto;
 }
 
 .descripcion{
+  text-align: center;
   font-size: 9px;
   position: relative;
+  margin-top: 8px;
 }
 
 
@@ -102,12 +117,12 @@ body{font-family: 'Quicksand', sans-serif;}
   }
   span.thumbnail {
     border: 5px dotted #ac1816 !important;
-    border-radius: 10px !important;
+    border-radius: 15px !important;
     -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.16);
     -moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.16);
     box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.16);
     padding: 15px;
-    min-height: 300px;
+    min-height: 250px;
     width: 85%;
     margin: 10px auto;
     display: block;
