--- a/app/views/promos/index.html.erb
+++ b/app/views/promos/index.html.erb
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
+  <div class="navbar-header">
+    <%= image_tag('logo_ara.png') %>
   </div>
 </nav>
 
