center the imagen in the thumbnail

--- a/app/assets/stylesheets/promos.scss
+++ b/app/assets/stylesheets/promos.scss
@@ -48,7 +48,8 @@ body{
 
 
   .thumbnail img{
-    margin: 0px 39%;
+    margin: 0px auto;
+    display: block;
   }
 
 // Place all the styles related to the Products controller here.
