--- a/app/views/promos/index.html.erb
+++ b/app/views/promos/index.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="navbar-header">
-    <%= image_tag('logo_ara.png') %>
+    <%= image_tag('logo_ara.png', style: "width: 100px, height: 100px;") %>
   </div>
 </nav>
 
