--- a/app/views/promos/new.html.erb
+++ b/app/views/promos/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Promo</h1>
+<div class="thumbnail">
+<h1>Crear promoción</h1>
 
 <%= render 'form', promo: @promo %>
 
-<%= link_to 'Back', promos_path %>
+
+</div>
