update the carousel for ktronix

--- a/app/assets/stylesheets/promos.scss
+++ b/app/assets/stylesheets/promos.scss
@@ -3,14 +3,14 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body{
-	background: asset-url('Ara2.png') no-repeat;
-  background-size: cover !important; 
+	// background: asset-url('Ara2.png') no-repeat;
+ //  background-size: cover !important; 
   height: auto;
   width: auto;
 }
 
 .navbar{
-  background-color: #ff3e0f;
+  background-color: #004c99;
   width: 100%;
   text-align: center;
 }
