--- a/app/assets/stylesheets/carousel.scss
+++ b/app/assets/stylesheets/carousel.scss
@@ -9,3 +9,9 @@
 .carousel .carousel-inner {
     height:100%;    
 }
+
+
+.carousel-inner>.item>img{
+	 max-width: 70% !important;
+	 margin: 0px auto !important;
+}
